added new unit tests all